--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.2.3",
     "passport": "~0.2.0",
     "react": "^0.11.2",
+    "react-forms": "^0.6.3",
     "require-dir": "^0.1.0",
     "rtts-assert": "git://github.com/angular/assert.git",
     "serve-favicon": "~2.0.1",
@@ -26,14 +27,15 @@
     "chai": "~1.9.1",
     "colors.css": "^2.0.3",
     "gulp": "^3.8.9",
-    "gulp-traceur": "~0.13.0",
     "gulp-concat": "^2.3.5",
+    "gulp-express": "^0.1.0",
     "gulp-less": "~1.3.5",
     "gulp-load-plugins": "^0.5.3",
     "gulp-mocha": "~0.5",
     "gulp-nodemon": "^1.0.4",
     "gulp-pure-cjs": "^0.1.2",
     "gulp-sass": "^1.2.0",
+    "gulp-traceur": "~0.13.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "node-bourbon": "^1.2.3",
