--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "body-parser": "~1.6.6",
     "browser-request": "^0.3.2",
+    "chilli": "^0.1.0",
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
     "express": "~4.8.6",
     "font-awesome": "^4.2.0",
+    "immutato": "^0.1.0",
     "methods": "^1.1.0",
     "mongoose": "^3.8.15",
     "morgan": "~1.2.3",
