--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "page": "^1.3.7",
     "passport": "~0.2.0",
     "require-dir": "^0.1.0",
-    "serve-favicon": "~2.0.1"
+    "serve-favicon": "~2.0.1",
+    "vdom-thunk": "^3.0.0"
   },
   "devDependencies": {
     "chai": "~1.9.1",
