--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chilli": "^0.1.0",
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
+    "ent": "^2.0.0",
     "express": "~4.8.6",
     "font-awesome": "^4.2.0",
     "immutato": "^0.1.0",
