--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "body-parser": "~1.6.6",
     "browser-request": "^0.3.2",
     "chilli": "^0.1.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.4",
-    "ent": "^2.0.0",
     "express": "~4.8.6",
+    "express-session": "^1.9.1",
     "font-awesome": "^4.2.0",
+    "he": "^0.5.0",
     "immutato": "^0.1.0",
     "methods": "^1.1.0",
     "mongoose": "^3.8.15",
     "morgan": "~1.2.3",
-    "node-event-emitter": "0.0.1",
     "object-assign": "^1.0.0",
     "object-path": "^0.6.0",
     "page": "^1.3.7",
-    "passport": "~0.2.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "require-dir": "^0.1.0",
     "serve-favicon": "~2.0.1",
     "vdom-thunk": "^3.0.0"
