--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~1.0.4",
     "express": "~4.8.6",
     "express-session": "^1.9.1",
+    "express-session-json": "0.0.5",
     "font-awesome": "^4.2.0",
     "he": "^0.5.0",
     "immutato": "^0.1.0",
@@ -27,6 +28,7 @@
     "passport-local": "^1.0.0",
     "require-dir": "^0.1.0",
     "serve-favicon": "~2.0.1",
+    "valid-email": "0.0.2",
     "vdom-thunk": "^3.0.0"
   },
   "devDependencies": {
