--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "morgan": "~1.2.3",
     "object-assign": "^1.0.0",
     "object-path": "^0.6.0",
-    "page": "^1.3.7",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "path-to-regexp": "^1.0.1",
     "require-dir": "^0.1.0",
     "serve-favicon": "~2.0.1",
     "valid-email": "0.0.2",
